tests/ecc-aws-384-network_acl_without_tag_information/placebo-red/ec2.DescribeNetworkAcls_1.json
{
    "status_code": 200,
    "data": {
        "NetworkAcls": [
            {
                "Associations": [],
                "Entries": [
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": true,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    },
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": false,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    }
                ],
                "IsDefault": false,
                "NetworkAclId": "acl-0717b036fe5a62281",
                "Tags": [],
                "VpcId": "vpc-12345asdfg",
                "OwnerId": "111111111111"
            }
        ],
        "ResponseMetadata": {}
    }
}
